--- a/Plugins/social.blacksky/plugin-config.json
+++ b/Plugins/social.blacksky/plugin-config.json
@@ -1,18 +1,21 @@
 {
-	"id": "social.blacksky",
+	"id": "com.blacksky",
 	"display_name": "Blacksky",
 	"service_name": "Blacksky",
-	"default_color": "blue",
+	"default_color": "black",
 	"icon": "https://bsky.app/static/apple-touch-icon.png",
 	"item_style": "post",
-	"site": "https://blacksky.community",
-	"jwt_prompt": "Email Address",
-	"jwt_authorize": "/xrpc/com.atproto.server.createSession",
-	"jwt_refresh": "/xrpc/com.atproto.server.refreshSession",
-	"refresh_status_code": 400,
-	"fail_status_code": 400,
+	"site": "https://blacksky.app",
+	"oauth_authorize": "https://blacksky.app/oauth/authorize",
+	"oauth_token": "https://blacksky.app/oauth/token",
+	"oauth_type": "code",
+	"oauth_code_key": "code",
+	"oauth_scope": "atproto",
+	"oauth_grant_type": "authorization_code",
+	"oauth_http_redirect": true,
+	"fail_status_code": 401,
 	"provides_attachments": true,
 	"check_interval": 300,
 	"minimum_app_version": "1.2",
-	"version": 8
+	"version": 1
 }
