--- a/Plugins/social.blacksky/plugin-config.json
+++ b/Plugins/social.blacksky/plugin-config.json
@@ -1,19 +1,16 @@
 {
-	"id": "com.blacksky",
+	"id": "social.blacksky",
 	"display_name": "Blacksky",
 	"service_name": "Blacksky",
-	"default_color": "black",
-	"icon": "https://bsky.app/static/apple-touch-icon.png",
+	"default_color": "blue",
+	"icon": "https://blacksky.community/static/apple-touch-icon.png",
 	"item_style": "post",
 	"site": "https://blacksky.app",
-	"oauth_authorize": "https://blacksky.app/oauth/authorize",
-	"oauth_token": "https://blacksky.app/oauth/token",
-	"oauth_type": "code",
-	"oauth_code_key": "code",
-	"oauth_scope": "atproto",
-	"oauth_grant_type": "authorization_code",
-	"oauth_http_redirect": true,
-	"fail_status_code": 401,
+	"jwt_prompt": "Email Address",
+	"jwt_authorize": "/xrpc/com.atproto.server.createSession",
+	"jwt_refresh": "/xrpc/com.atproto.server.refreshSession",
+	"refresh_status_code": 400,
+	"fail_status_code": 400,
 	"provides_attachments": true,
 	"check_interval": 300,
 	"minimum_app_version": "1.2",
